--- a/Vandy Vans/Vandy Vans/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Vandy Vans/Vandy Vans/en.lproj/MainStoryboard_iPhone.storyboard
@@ -135,12 +135,13 @@
                     <navigationItem key="navigationItem" title="About" id="3ar-R7-UEN">
                         <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="zcG-se-jcg">
                             <connections>
-                                <action selector="donePressed:" destination="hTO-Uo-jDl" id="TFx-hH-oVp"/>
+                                <segue destination="4Yk-su-FHY" kind="unwind" unwindAction="aboutViewDismissed:" id="ZRN-sZ-oHw"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LPR-4B-FVK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="4Yk-su-FHY" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2907" y="-398"/>
         </scene>
@@ -507,14 +508,69 @@
         <image name="map" width="16" height="16"/>
         <image name="target" width="16" height="16"/>
     </resources>
+    <classes>
+        <class className="GAITrackedViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GAITrackedViewController.h"/>
+        </class>
+        <class className="GMSMapView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GMSMapView.h"/>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="SSTextView" superclassName="UITextView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SSTextView.h"/>
+        </class>
+        <class className="UIRefreshControl" superclassName="UIControl">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UIRefreshControl.h"/>
+        </class>
+        <class className="VVAboutTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/VVAboutTableViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="donePressed:" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="VVArrivalTimeTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/VVArrivalTimeTableViewController.h"/>
+        </class>
+        <class className="VVAttributionViewController" superclassName="GAITrackedViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/VVAttributionViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="attributionTextView" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="VVMapViewController" superclassName="GAITrackedViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/VVMapViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="vanMapView" candidateClass="GMSMapView"/>
+            </relationships>
+        </class>
+        <class className="VVNotificationCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/VVNotificationCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="notificationSwitch" candidateClass="UISwitch"/>
+            </relationships>
+        </class>
+        <class className="VVReportTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/VVReportTableViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="descriptionTextView" candidateClass="SSTextView"/>
+                <relationship kind="outlet" name="emailTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="notifyWhenResolvedTableViewCell" candidateClass="UITableViewCell"/>
+            </relationships>
+        </class>
+        <class className="VVStopTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/VVStopTableViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="uTP-je-CRm"/>
-        <segue reference="Yb4-In-ycU"/>
+        <segue reference="vSy-tV-Pjo"/>
+        <segue reference="7Di-BC-NYA"/>
         <segue reference="tSf-t1-2MO"/>
     </inferredMetricsTieBreakers>
 </document>
